syntax = "proto3";
package kms_proto;

enum EncType {
  AEAD = 0;
  SGXFS = 1;
}

message CreateKeyRequest {
  EncType enc_type = 1;
}

message AeadConfig {
  bytes key = 1;
  bytes nonce = 2;
  bytes ad = 3;
}

message KeyConfig {
  oneof config {
    AeadConfig AEAD = 1;
    bytes SGXFS = 2;
  }
}
message CreateKeyResponse {
  string key_id = 1;
  KeyConfig config = 2;
}

message GetKeyRequest {
  string key_id = 1;
}

message GetKeyResponse {
  KeyConfig config = 1;
}

message DeleteKeyRequest {
  string key_id = 1;
}

message DeleteKeyResponse {
  KeyConfig config = 1;
}

service KMS {
  rpc GetKey(GetKeyRequest) returns (GetKeyResponse);
  rpc DelKey(DeleteKeyRequest) returns (DeleteKeyResponse);
  rpc CreateKey(CreateKeyRequest) returns (CreateKeyResponse);
}
